traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:6: error: illegal start of statement
      [gauche,cote] = posSuivante(gauche,cote)
      ^TraversalZigZag:23: error: ';' expected but '[' found.
       return [!gauche,!cote]
              ^TraversalZigZag:27: error: ';' expected but '[' found.
      return [!gauche,cote]}
             ^TraversalZigZag:30: error: ';' expected but '[' found.
      return [gauche, cote] }
             ^