traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  ecritMessage("0")
  var cpt = 0
  var gauche = false
  var cote = false
  while (!posFinale()) {
    	[gauche,cote] = posSuivante(gauche,cote)
    	cpt += 1
    	ecritMessage(cpt)
    	
  }
}


def posFinale() : Boolean = {
  return ((getMondeLargeur() - 1 == getX()) && (getY() == getMondeHauteur() - 1))
}



def posSuivante(gauche : Boolean, cote : Boolean) : Array[Boolean] = {
  if ((getX() == getMondeLargeur() - 1  || getX() == 0)&& cote ){
    	setPos(getX(), getY() + 1)
   		return [!gauche,!cote]
  }
  else if (!gauche) {
  		setPos(getX() + 1, getY())
    	return [!gauche,cote]}
  else {
  		setPos(getX() - 1 , getY())
    	return [gauche, cote] }
  }

           
           
